# databricks-tools-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROLES.md  USER_STORY_AUTOMATION_WALKTHROUGH.md  USER_STORY_FRAMEWORK.md  mypy.ini  pyproject.toml  ruff.toml
.claude/: DOCUMENTATION_GUIDELINES.md  commands.md  subagents.md
.claude/agents/: data-engineer.md  devops-config.md  python-architect.md  story-architect.md  test-strategist.md  user-story-finalizer.md
.claude/commands/: analyze-performance.md  debug-config.md  define-user-story.md  implement-user-story.md  lint.md  prime.md  run-tests.md  update-documentation.md  validate-implementation.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish.yml
docs/architecture/: ARCHITECTURE.md
docs/development/: ROLES.md  USER_STORY_AUTOMATION_WALKTHROUGH.md
docs/guides/: CICD_SETUP.md  INSTALLATION.md  PROJECT_SETUP.md
examples/: advanced_queries.py  basic_usage.py  custom_service.py  testing_example.py
scripts/: build.py  publish.py  version.py
src/databricks_tools/: __init__.py  server.py
src/databricks_tools/cli/: __init__.py  init.py
src/databricks_tools/config/: __init__.py  installer.py  models.py  workspace.py
src/databricks_tools/core/: __init__.py  connection.py  container.py  query_executor.py  token_counter.py
src/databricks_tools/security/: __init__.py  role_manager.py
src/databricks_tools/services/: __init__.py  catalog_service.py  chunking_service.py  function_service.py  response_manager.py  table_service.py
tests/test_cli/: test_init.py
tests/test_config/: __init__.py  test_installer.py  test_models.py  test_workspace.py
tests/test_core/: __init__.py  test_connection.py  test_container.py  test_query_executor.py  test_token_counter.py
tests/test_packaging/: __init__.py  test_build.py  test_metadata.py
tests/test_security/: __init__.py  test_role_manager.py
tests/test_server/: __init__.py  test_mcp_tools.py
tests/test_services/: __init__.py  test_catalog_service.py  test_chunking_service.py  test_function_service.py  test_response_manager.py  test_table_service.py
user_stories/: README.md  STORY_CREATION_GUIDE.md
user_stories/phase-1-foundation/: US-1.1-pydantic-models.md  US-1.2-workspace-manager.md  US-1.3-role-manager.md
user_stories/phase-2-core/: US-2.1-token-counter.md  US-2.2-connection-manager.md  US-2.3-query-executor.md
user_stories/phase-3-business/: US-3.1-catalog-service.md  US-3.2-table-service.md  US-3.3-function-service.md
user_stories/phase-4-chunking/: US-4.1-chunking-service.md  US-4.2-response-manager.md
user_stories/phase-5-integration/: US-5.1-di-container.md  US-5.2-refactor-tools.md  US-5.3-remove-legacy.md
user_stories/phase-6-quality/: US-6.1-integration-tests.md  US-6.2-precommit-hooks.md  US-6.3-type-hints.md  US-6.4-documentation.md
user_stories/phase-7-distribution/: US-7.1-pip-installation-and-initialization.md  US-7.2-private-pypi-publishing.md  US-7.3-version-management-changelog.md  US-7.4-cicd-pipeline.md
user_stories/templates/: user_story_template.md
